<resources>
    <string name="app_name">tour beta 1</string>
    <string name="e_mail">E-Mail</string>
    <string name="logo">logo</string>
    <string name="Password">Password</string>
    <string name="log_in">Log In</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="app_name2">TourIt</string>
    <string name="title_activity_under10_k">Under10K</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="select_your_starting_point">Select your starting point</string>
    <string name="new_delhi">New Delhi</string>
    <string name="price_range">Select your price range</string>
    <string name="under_10k">Under 10K</string>
    <string name="under_15k">Under 15K</string>
    <string name="under_25k">Under 25K</string>
    <string name="money_no_constraint">Money no constraint</string>
    <string name="explore_under_10k">Destinations to Explore under 10K</string>
    <string name="shimla_description">The former summer capital of the British India, and the present capital of Himachal Pradesh, Shimla has been blessed with all the natural bounties which one can think of. It has got a scenic location, it is surrounded by green hills with snow capped peaks. The spectacular cool hills accompanied by the structures made during the colonial era creates an aura which is very different from other hill. Bulging at its seams with unprecedented expansion, Shimla retains its colonial heritage, with grand old buildings, charming iron lamp posts and Anglo-Saxon names. The Mall, packed with shops and eateries, is the main attraction of the town, and Scandal Point, associated with the former Maharaja of Patiala’s escapades, offers a view of distant snow clad peaks.Shimla is ideally located, and though there is an air service to the town, it is best reached by road that takes in the charms of the HIMALAYAN countryside at its best.</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="more_cities_coming">*More cities will be coming soon to the list!</string>
    <string name="hp_travel_advisory">Himachal Pradesh Travel Advisory</string>
    <string name="advisory_info">* Downloaded Arogya Setu App \n* Always use face mask to protect yourself and others \n* Wash your hands repeatedly or use sanitizer \n* Maintain Social Distancing</string>
    <string name="shimla">Shimla</string>
    <string name="chandigarh">Chandigarh</string>
    <string name="ChandigarhDesc">Chandigarh is one of the early planned cities in post-independence India and is internationally known for its architecture and urban design. The master plan of the city was prepared by Swiss-French architect Le Corbusier, which built upon earlier plans created by the Polish architect Maciej Nowicki and the American planner Albert Mayer. Most of the government buildings and housing in the city were designed by a team headed by Le Corbusier, Jane Drew and Maxwell Fry. Chandigarh\'s Capitol Complex—as part of a global ensemble of Corbusier\'s buildings—was declared a World Heritage Site by UNESCO at the 40th session of the World Heritage Conference in July 2016.</string>
    <string name="jaipur_desc">Jaipur is a popular tourist destination in India and forms a part of the west Golden Triangle tourist circuit along with Delhi and Agra (240 km, 149 mi).[13] It also serves as a gateway to other tourist destinations in Rajasthan such as Jodhpur (348 km, 216 mi), Jaisalmer (571 km, 355 mi), Bharatpur (186 km, 116 mi), Udaipur (421 km, 262 mi), Kota (252 km, 156 mi) and Mount Abu (520 km, 323 mi). On 6 July 2019, UNESCO World Heritage Committee inscribed Jaipur the Pink City of India" among its World Heritage Sites. The city is also home to the UNESCO World Heritage Sites Amer Fort and Jantar Mantar.</string>
    <string name="jaipur">Jaipur</string>
    <string name="amritsar">Amritsar</string>
    <string name="amritsar_desc">Amritsar has been chosen as one of the heritage cities for HRIDAY scheme of the Government of India. Amritsar is home to Harmandir Sahib, popularly known as the Golden Temple, one of Sikhism\'s most spiritually significant and most-visited gurudwaras. The city is also known for its wooden chessboards and chess pieces manufacturing industry.</string>
    <string name="agra">Agra</string>
    <string name="Agra_desc">Agra\'s notable historical period began during Sikandar Lodi\'s reign, but the golden age of the city began with the Mughals. Agra was the foremost city of the Indian subcontinent and the capital of the Mughal Empire under Mughal emperors Babur, Humayun, Akbar, Jahangir and Shah Jahan. Under Mughal rule, Agra became a centre for learning, arts, commerce, and religion, and saw the construction of the Agra Fort, Sikandra and Agra\'s most prized monument, the Taj Mahal, built by Shah Jahan as a mausoleum for his favourite empress. With the decline of the Mughal empire in the late 18th century, the city fell successively first to Marathas and later to the East India Company. After Independence, Agra has developed into an industrial town, with a booming tourism industry, along with footwear, leather and other manufacturing. The Taj Mahal and the Agra Fort are UNESCO World Heritage Sites. The city features mild winters, hot and dry summers and a monsoon season, and is famous for its Mughlai cuisine. Agra is included on the Golden Triangle tourist circuit, along with Delhi and Jaipur; and the Uttar Pradesh Heritage Arc, a tourist circuit of Uttar Pradesh, along with Lucknow and Varanasi.</string>
    <string name="travelAdvisoryText">Click here to view travel Advisory</string>
    <string name="punjab_travel_advisory">Punjab Travel Advisory</string>
    <string name="rajasthan_travel_advisory">Rajasthan Travel Advisory</string>
</resources>