<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img18"
    android:backgroundTintMode="multiply"
    android:backgroundTint="@color/teal_700"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/airplane"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/logo" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/logo"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="20dp"
        android:autofillHints="E-Mail"
        android:background="@drawable/background"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:textColorHint="#E1F5FE"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/email"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="20dp"
        android:autofillHints="Password"
        android:background="@drawable/background"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:textColorHint="#E1F5FE"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:text="@string/log_in"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:textColor="@color/white"/>

    <Button

        android:id="@+id/signup"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:text="@string/sign_up"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:textColor="@color/white"/>

</RelativeLayout>