<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Under10K">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="889dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/explore_under_10k"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <!--For Shimla            -->
            <TextView
                android:id="@+id/Shimla"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/shimla"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <ImageView
                android:id="@+id/ShimlaPic"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/shimla" />

            <TextView
                android:id="@+id/ShimlaDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="50dp"
                android:text="@string/shimla_description" />

            <TextView
                android:id="@+id/travelAdvisoryShimla"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="50dp"
                android:text="@string/travelAdvisoryText" />


            <!--For Chandigarh-->
            <TextView
                android:id="@+id/Chandigarh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/chandigarh"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <ImageView
                android:id="@+id/ChandigarhPic"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/chandigarh" />

            <TextView
                android:id="@+id/ChandigarhDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="50dp"
                android:text="@string/ChandigarhDesc" />

            <TextView
                android:id="@+id/travelAdvisoryChandigarh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="50dp"
                android:text="@string/travelAdvisoryText" />

<!--            for Jaipur-->
            <TextView
                android:id="@+id/Jaipur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/jaipur"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <ImageView
                android:id="@+id/JaipurPic"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/jaipur" />

            <TextView
                android:id="@+id/JaipurDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="50dp"
                android:text="@string/jaipur_desc" />

            <TextView
                android:id="@+id/travelAdvisoryJaipur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="50dp"
                android:text="@string/travelAdvisoryText" />

<!--            for Amritsar-->
            <TextView
                android:id="@+id/Amritsar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/amritsar"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <ImageView
                android:id="@+id/AmritsarPic"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/amritsar" />

            <TextView
                android:id="@+id/AmritsarDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="50dp"
                android:text="@string/amritsar_desc" />

            <TextView
                android:id="@+id/travelAdvisoryAmritsar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="50dp"
                android:text="@string/travelAdvisoryText" />

<!--            for Agra-->
            <TextView
                android:id="@+id/Agra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/agra"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <ImageView
                android:id="@+id/AgraPic"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/agra" />

            <TextView
                android:id="@+id/AgraDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="50dp"
                android:paddingBottom="50dp"
                android:text="@string/Agra_desc" />

            <TextView
                android:id="@+id/travelAdvisoryAgra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="50dp"
                android:text="@string/travelAdvisoryText" />
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>