<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img14"
    android:backgroundTintMode="multiply"
    android:backgroundTint="@color/teal_700"
    tools:context=".Locations">

    <TextView
        android:id="@+id/locationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/select_your_starting_point"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/locationDelhi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/locationTitle"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/white"
        android:text="@string/new_delhi"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#BD9797"
        app:layout_constraintEnd_toEndOf="@+id/locationTitle"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/locationTitle"
        app:layout_constraintTop_toBottomOf="@+id/locationTitle" />

    <TextView
        android:id="@+id/Soon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/more_cities_coming"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toBottomOf="@+id/locationDelhi"
        android:textColor="@color/white"/>
</androidx.constraintlayout.widget.ConstraintLayout>